roaring_dart/lib/generated_bindings.dart


  late final _roaring_bitmap_deserialize_safePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Void>,
              ffi.Size)>>('roaring_bitmap_deserialize_safe');
  late final _roaring_bitmap_deserialize_safe =
      _roaring_bitmap_deserialize_safePtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Void>, int)>();

  /// How many bytes are required to serialize this bitmap (NOT compatible
  /// with Java and Go versions)
  int roaring_bitmap_size_in_bytes(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_size_in_bytes(
      r,
    );
  }

  late final _roaring_bitmap_size_in_bytesPtr = _lookup<
          ffi.NativeFunction<ffi.Size Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_size_in_bytes');
  late final _roaring_bitmap_size_in_bytes = _roaring_bitmap_size_in_bytesPtr
      .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Read bitmap from a serialized buffer.
  /// In case of failure, NULL is returned.
  ///
  /// This function is unsafe in the sense that if there is no valid serialized
  /// bitmap at the pointer, then many bytes could be read, possibly causing a
  /// buffer overflow.  See also roaring_bitmap_portable_deserialize_safe().
  ///
  /// This is meant to be compatible with the Java and Go versions:
  /// https://github.com/RoaringBitmap/RoaringFormatSpec
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_portable_deserialize(
    ffi.Pointer<ffi.Char> buf,
  ) {
    return _roaring_bitmap_portable_deserialize(
      buf,
    );
  }

  late final _roaring_bitmap_portable_deserializePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Pointer<ffi.Char>)>>('roaring_bitmap_portable_deserialize');
  late final _roaring_bitmap_portable_deserialize =
      _roaring_bitmap_portable_deserializePtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Char>)>();

  /// Read bitmap from a serialized buffer safely (reading up to maxbytes).
  /// In case of failure, NULL is returned.
  ///
  /// This is meant to be compatible with the Java and Go versions:
  /// https://github.com/RoaringBitmap/RoaringFormatSpec
  ///
  /// The function itself is safe in the sense that it will not cause buffer overflows.
  /// However, for correct operations, it is assumed that the bitmap read was once
  /// serialized from a valid bitmap (i.e., it follows the format specification).
  /// If you provided an incorrect input (garbage), then the bitmap read may not be in
  /// a valid state and following operations may not lead to sensible results.
  /// In particular, the serialized array containers need to be in sorted order, and the
  /// run containers should be in sorted non-overlapping order. This is is guaranteed to
  /// happen when serializing an existing bitmap, but not for random inputs.
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_portable_deserialize_safe(
    ffi.Pointer<ffi.Char> buf,
    int maxbytes,
  ) {
    return _roaring_bitmap_portable_deserialize_safe(
      buf,
      maxbytes,
    );
  }

  late final _roaring_bitmap_portable_deserialize_safePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Char>,
              ffi.Size)>>('roaring_bitmap_portable_deserialize_safe');
  late final _roaring_bitmap_portable_deserialize_safe =
      _roaring_bitmap_portable_deserialize_safePtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Char>, int)>();

  /// Read bitmap from a serialized buffer.
  /// In case of failure, NULL is returned.
  ///
  /// Bitmap returned by this function can be used in all readonly contexts.
  /// Bitmap must be freed as usual, by calling roaring_bitmap_free().
  /// Underlying buffer must not be freed or modified while it backs any bitmaps.
  ///
  /// The function is unsafe in the following ways:
  /// 1) It may execute unaligned memory accesses.
  /// 2) A buffer overflow may occur if buf does not point to a valid serialized
  /// bitmap.
  ///
  /// This is meant to be compatible with the Java and Go versions:
  /// https://github.com/RoaringBitmap/RoaringFormatSpec
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_portable_deserialize_frozen(
    ffi.Pointer<ffi.Char> buf,
  ) {
    return _roaring_bitmap_portable_deserialize_frozen(
      buf,
    );
  }

  late final _roaring_bitmap_portable_deserialize_frozenPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Char>)>>(
      'roaring_bitmap_portable_deserialize_frozen');
  late final _roaring_bitmap_portable_deserialize_frozen =
      _roaring_bitmap_portable_deserialize_frozenPtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Char>)>();

  /// Check how many bytes would be read (up to maxbytes) at this pointer if there
  /// is a bitmap, returns zero if there is no valid bitmap.
  ///
  /// This is meant to be compatible with the Java and Go versions:
  /// https://github.com/RoaringBitmap/RoaringFormatSpec
  int roaring_bitmap_portable_deserialize_size(
    ffi.Pointer<ffi.Char> buf,
    int maxbytes,
  ) {
    return _roaring_bitmap_portable_deserialize_size(
      buf,
      maxbytes,
    );
  }

  late final _roaring_bitmap_portable_deserialize_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<ffi.Char>,
              ffi.Size)>>('roaring_bitmap_portable_deserialize_size');
  late final _roaring_bitmap_portable_deserialize_size =
      _roaring_bitmap_portable_deserialize_sizePtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  /// How many bytes are required to serialize this bitmap.
  ///
  /// This is meant to be compatible with the Java and Go versions:
  /// https://github.com/RoaringBitmap/RoaringFormatSpec
  int roaring_bitmap_portable_size_in_bytes(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_portable_size_in_bytes(
      r,
    );
  }

  late final _roaring_bitmap_portable_size_in_bytesPtr = _lookup<
          ffi.NativeFunction<ffi.Size Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_portable_size_in_bytes');
  late final _roaring_bitmap_portable_size_in_bytes =
      _roaring_bitmap_portable_size_in_bytesPtr
          .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Write a bitmap to a char buffer.  The output buffer should refer to at least
  /// `roaring_bitmap_portable_size_in_bytes(r)` bytes of allocated memory.
  ///
  /// Returns how many bytes were written which should match
  /// `roaring_bitmap_portable_size_in_bytes(r)`.
  ///
  /// This is meant to be compatible with the Java and Go versions:
  /// https://github.com/RoaringBitmap/RoaringFormatSpec
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  int roaring_bitmap_portable_serialize(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<ffi.Char> buf,
  ) {
    return _roaring_bitmap_portable_serialize(
      r,
      buf,
    );
  }

  late final _roaring_bitmap_portable_serializePtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<ffi.Char>)>>('roaring_bitmap_portable_serialize');
  late final _roaring_bitmap_portable_serialize =
      _roaring_bitmap_portable_serializePtr.asFunction<
          int Function(ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<ffi.Char>)>();

  /// Returns number of bytes required to serialize bitmap using frozen format.
  int roaring_bitmap_frozen_size_in_bytes(
    ffi.Pointer<roaring_bitmap_t> r,
  ) {
    return _roaring_bitmap_frozen_size_in_bytes(
      r,
    );
  }

  late final _roaring_bitmap_frozen_size_in_bytesPtr = _lookup<
          ffi.NativeFunction<ffi.Size Function(ffi.Pointer<roaring_bitmap_t>)>>(
      'roaring_bitmap_frozen_size_in_bytes');
  late final _roaring_bitmap_frozen_size_in_bytes =
      _roaring_bitmap_frozen_size_in_bytesPtr
          .asFunction<int Function(ffi.Pointer<roaring_bitmap_t>)>();

  /// Serializes bitmap using frozen format.
  /// Buffer size must be at least roaring_bitmap_frozen_size_in_bytes().
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  void roaring_bitmap_frozen_serialize(
    ffi.Pointer<roaring_bitmap_t> r,
    ffi.Pointer<ffi.Char> buf,
  ) {
    return _roaring_bitmap_frozen_serialize(
      r,
      buf,
    );
  }

  late final _roaring_bitmap_frozen_serializePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<roaring_bitmap_t>,
              ffi.Pointer<ffi.Char>)>>('roaring_bitmap_frozen_serialize');
  late final _roaring_bitmap_frozen_serialize =
      _roaring_bitmap_frozen_serializePtr.asFunction<
          void Function(
              ffi.Pointer<roaring_bitmap_t>, ffi.Pointer<ffi.Char>)>();

  /// Creates constant bitmap that is a view of a given buffer.
  /// Buffer data should have been written by `roaring_bitmap_frozen_serialize()`
  /// Its beginning must also be aligned by 32 bytes.
  /// Length must be equal exactly to `roaring_bitmap_frozen_size_in_bytes()`.
  /// In case of failure, NULL is returned.
  ///
  /// Bitmap returned by this function can be used in all readonly contexts.
  /// Bitmap must be freed as usual, by calling roaring_bitmap_free().
  /// Underlying buffer must not be freed or modified while it backs any bitmaps.
  ///
  /// This function is endian-sensitive. If you have a big-endian system (e.g., a mainframe IBM s390x),
  /// the data format is going to be big-endian and not compatible with little-endian systems.
  ffi.Pointer<roaring_bitmap_t> roaring_bitmap_frozen_view(
    ffi.Pointer<ffi.Char> buf,
    int length,
  ) {
    return _roaring_bitmap_frozen_view(
      buf,
      length,
    );
  }

  late final _roaring_bitmap_frozen_viewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<roaring_bitmap_t> Function(
              ffi.Pointer<ffi.Char>, ffi.Size)>>('roaring_bitmap_frozen_view');
  late final _roaring_bitmap_frozen_view =
      _roaring_bitmap_frozen_viewPtr.asFunction<
          ffi.Pointer<roaring_bitmap_t> Function(ffi.Pointer<ffi.Char>, int)>();

  /// Iterate over the bitmap elements. The function iterator is called once for
  /// all the values with ptr (can be NULL) as the second parameter of each call.
  ///
  /// `roaring_iterator` is simply a pointer to a function that returns bool
  /// (true means that the iteration should continue while false means that it
  /// should stop), and takes (uint32_t,void*) as inputs.
  ///
  /// Returns true if the roaring_iterator returned true throughout (so that all
  /// data points were necessarily visited).
  ///
  /// Iteration is ordered: from the smallest to the largest elements.
  bool roaring_iterate(
    ffi.Pointer<roaring_bitmap_t> r,
    roaring_iterator iterator,
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _roaring_iterate(
      r,
      iterator,
      ptr,
    );
  }
